--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="features-list">
                     <li>
                         <span class="checkmark">✓</span>
-                        No credit card required
+                        No credit cafrd required
                     </li>
                     <li>
                         <span class="checkmark">✓</span>
